Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116785

Topography example shows highlight series in slice view

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.0 FF
    • 6.6.0 Beta4
    • Graphs: 3D
    • None
    • 98029f9d7 (dev), 377c45812 (dev), 737bc9dd6 (6.9), 93a2e40fd (tqtc/lts-6.8)

      Reproducible in widgetgraphgallery > Surface Graph > Textured Topograhy example:

      • set selection mode to Row or Column
      • click on the graph

      -> highlight series is rendered on slice view, and incorrectly

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            spouke Sakaria Pouke
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes