src/graphs/qml/qquickgraphssurface_p.h
@@ -210,6 +210,8 @@ private:
 
     QVector3D getNormalizedVertex(const QSurfaceDataItem &data, bool polar, bool flipXZ);
     QRect calculateSampleSpace(const QSurfaceDataArray &array);
+    QPointF mapCoordsToWorldSpace(SurfaceModel *model, const QPointF &coords);
+    QPoint mapCoordsToSampleSpace(SurfaceModel *model, const QPointF &coords);
     void createIndices(SurfaceModel *model, int columnCount, int rowCount);
     void createCoarseVertices(SurfaceModel *model, int x, int y, int endX, int endY);
     void createGridlineIndices(SurfaceModel *model, int x, int y, int endX, int endY);
